# mario-the-plumber

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  app_ui.py  client.py  debug_trace.py  env.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate_submission.py
benchmark/: __init__.py  action_metadata.py  api_payloads.py  catalog.py  diagnostics.py  env_actions.py  env_reporting.py  evaluation.py  grading.py  inference_protocol.py  inspection.py  observation_support.py  progress.py  runtime.py  runtime_state.py  task_ids.py
docs/: ADAPTIVE_ETL_UPGRADE.md  BASELINE_REPRODUCIBILITY_REPORT.md  BENCHMARK_ARCHITECTURE.md  CONTEXT 2.md  CONTEXT 3.md  CONTEXT.md  CONTRIBUTING.md  NEXT_STEPS_FROM_PAPERS.md  OPEN_WORLD_BENCHMARK_NOTES.md  REFERENCE_ENV_COMPARISON.md  REWARD_STRUCTURE_AND_ADAPTATION.md  RL_BENCHMARK_REVIEW.md
graders/: __init__.py  runtime.py  task1.py  task2.py  task3.py  task4.py  task5.py
openenv_mario_the_plumber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pipeline_doctor/: README.md  __init__.py  inference.py  pyproject.toml
scripts/: __init__.py  benchmark_adaptation.py  benchmark_models.py  export_benchmark_metadata.py  generate_submission_artifacts.py  generate_visuals.py  run_with_mlflow.py  train_trained_policy.py  validate-live-space.sh  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  benchmark_demo.py  data_generator.py  environment_support.py  grader.py  pipeline_doctor_environment.py  (+2 more)
(+68 files in other folders)
